@@ -142,8 +142,9 @@ use_rcsparse = 0
 address = <a href="mailto:cvs-admin@insert.your.domain.here">No admin address has been configured</a>
 
 #
-# This should contain a list of modules in the repository that should not be
-# displayed (by default or by explicit path specification).
+# This should contain a list of modules (that is, top-level directories within 
+# repositories) that should not be displayed (by default or by explicit path
+# specification).
 #
 # This configuration can be a simple list of modules, or it can get quite
 # complex:
@@ -162,8 +163,9 @@ address = <a href="mailto:cvs-admin@insert.your.domain.here">No admin address ha
 #
 # Tests are case-sensitive.
 #
-forbidden =
-
+# NOTE: This is for the hiding of modules within repositories, *not* 
+# for the hiding of repositories (roots) themselves.
+#
 # Some examples:
 #
 # Disallow "example" but allow all others:
@@ -184,6 +186,37 @@ forbidden =
 # Allow "xml", forbid other modules starting with "x", and allow the rest:
 #   forbidden = !xml, x*, !*
 #
+forbidden =
+
+#
+# This is similar to 'forbidden', but differs in some key ways:
+#
+#   *) Rather than shell-style "glob" expressions, the values in this
+#      list are regular expressions.  You can still prepend a ! character
+#      to each regular expression to invert its meaning, though.
+#
+#   *) It compares not against modules only, but against paths consisting
+#      of the repository (or root) name plus the path of the versioned file
+#      or directory to be tested.  For example, to see if the user is 
+#      authorized to see the path "/trunk/www/index.html" in the repository
+#      whose root name is "svnrepos", this authorizer will test the path
+#      "svnrepos/trunk/www/index.html" against the list of forbidden regular
+#      expressions.
+#
+# NOTE: Use of this configuration option will *disable* any configuration of
+# the 'forbidden' option -- they cannot be used simultaneously.
+#
+# Some examples:
+#
+#    Disallow files named "PRIVATE", but allow all others:
+#       forbiddenre = /PRIVATE$
+#
+#    Allow only the "example1" and "example2" roots and the paths inside them,
+#    disallowing all others (which can be done in multiple ways):
+#       forbiddenre = !^example1(/|$), !^example2(/|$)/
+#       forbiddenre = !^example[12](/|$)
+#
+forbiddenre = 
 
 #
 # This option provides a mechanism for custom key/value pairs to be
