@@ -7,6 +7,7 @@ Version 1.0.5 (released ??-???-????)
   * fix bug tarball generation for remote Subversion repositories
   * fix query interface file-count-limiting logic
   * security fix: omit commits of all-forbidden files from query results
+  * new 'forbiddenre' regexp-based path authorization feature
 
 Version 1.0.4 (released 10-Apr-2007)
 
